# larql

./: .gitignore  Cargo.toml  FORK.md  Makefile  README.md  history.txt
.github/workflows/: build-linux.yml
crates/larql-cli/: Cargo.toml
crates/larql-cli/src/: main.rs
crates/larql-cli/src/commands/extraction/: circuit_discover_cmd.rs  extract_index_cmd.rs  mod.rs  ov_gate_cmd.rs  predict_cmd.rs  walk_cmd.rs
crates/larql-cli/src/commands/query/: mod.rs
crates/larql-cli/src/commands/surreal/: vector_export_surql_cmd.rs  vector_import_cmd.rs  vector_load_cmd.rs
crates/larql-compute/: Cargo.toml  build.rs
crates/larql-compute/benches/: matmul.rs
crates/larql-compute/csrc/: q4_dot.c
crates/larql-compute/examples/: best_multi_layer.rs  best_pipeline.rs  compare_decode.rs  compare_formats.rs  compare_generation.rs  compare_ollama.rs  compare_pipeline.rs  demo_architecture.rs  demo_basic.rs  demo_build_q4t.rs  profile_components.rs  profile_full_suite.rs  profile_kernels.rs  profile_kv_cache.rs  profile_operations.rs  profile_per_layer.rs  profile_q4_attention.rs  profile_q4_basic.rs  profile_raw_dispatch.rs  profile_transpose.rs
crates/larql-compute/src/: lib.rs
crates/larql-compute/src/cpu/: mod.rs
crates/larql-compute/src/cuda/: mod.rs
crates/larql-compute/tests/: test_correctness.rs  test_metal_shaders.rs
crates/larql-core/examples/: algorithm_demo.rs  bench_graph.rs  serialization_demo.rs
crates/larql-core/src/: lib.rs
crates/larql-core/src/algo/: mod.rs
crates/larql-core/src/core/: graph.rs
crates/larql-core/src/io/: mod.rs
crates/larql-inference/: Cargo.toml  README.md
crates/larql-inference/examples/: bench_inference.rs  bench_layer_graph.rs  bench_seqlen.rs  memory_analysis.rs  test_q4_accuracy.rs  test_q4_projection_cosine.rs
crates/larql-inference/src/: attention.rs  capture.rs  error.rs  ffn.rs  forward.rs  lib.rs  model.rs  residual.rs  tokenizer.rs
crates/larql-inference/src/clustering/: probe.rs
crates/larql-inference/src/ffn/experimental/: cached.rs  clustered.rs  down_clustered.rs  entity_routed.rs  feature_list.rs  graph.rs
crates/larql-inference/src/vindex/: build.rs  build_from_vectors.rs  mod.rs  walk_ffn.rs  weights.rs
crates/larql-inference/src/walker/: weight_walker.rs
crates/larql-inference/tests/: test_modules.rs
crates/larql-lql/: Cargo.toml
crates/larql-lql/examples/: lql_demo.rs
crates/larql-lql/src/executor/: introspection.rs  lifecycle.rs  mod.rs  mutation.rs  query.rs  tests.rs
crates/larql-models/: Cargo.toml
crates/larql-models/examples/: architecture_demo.rs
crates/larql-models/src/: config.rs  detect.rs  gemma3.rs  lib.rs  vectors.rs
crates/larql-models/src/loading/: safetensors.rs
crates/larql-python/: Cargo.toml  README.md
crates/larql-python/bench/: bench_bindings.py
crates/larql-python/python/larql/: __init__.py  mlx.py
crates/larql-python/src/: lib.rs  vindex.rs
crates/larql-python/tests/: test_bindings.py
crates/larql-server/src/: grpc.rs  main.rs
crates/larql-server/src/routes/: infer.rs
crates/larql-surreal/: Cargo.toml
crates/larql-surreal/examples/: bench_sql.rs  sql_demo.rs
crates/larql-surreal/src/: client.rs  error.rs  lib.rs  loader.rs
crates/larql-surreal/surql/: component_schema.surql  load_progress.surql  setup.surql
crates/larql-surreal/surql/queries/: circuit_type.surql  cross_layer_feature.surql  embedding_neighbors.surql  entity_explore.surql  feature_neighbors.surql  residual_projection.surql  token_lookup.surql
crates/larql-surreal/tests/: test_client.rs  test_loader.rs
crates/larql-vindex/: Cargo.toml  README.md
crates/larql-vindex/examples/: bench_scaling.rs  vindex_bench.rs  vindex_demo.rs
crates/larql-vindex/src/: config.rs  error.rs  lib.rs  load.rs  mutate.rs
crates/larql-vindex/src/clustering/: kmeans.rs
crates/larql-vindex/src/extract/: build.rs  streaming.rs
crates/larql-vindex/src/format/: load.rs  weights.rs
crates/larql-vindex/src/index/: core.rs  gate.rs  hnsw.rs  mod.rs  router.rs  walk.rs
crates/larql-vindex/src/patch/: core.rs
crates/larql-vindex/tests/: test_vindex.rs
demo/: Dockerfile  README.md  app.py  requirements.txt  setup.sh  utils.py
demo/hf_space/: Dockerfile  README.md
docs/: circuit-types.md  cli.md  findings.md  lql-guide.md  lql-spec.md  validation.md  vindex-spec.md  weight-extraction.md
experiments/02_manifold/: dimensionality.py
knowledge/: README.md
knowledge/scripts/: probe_mlx.py
scripts/: circuit_classify.py  edge_discover.py  edge_discover_fast.py
surql/queries/: attention_heads.surql  attention_to_ffn.surql  circuit_distribution.surql  circuit_type_batch.surql  entity_to_ffn_gate.surql  factual_edge_discovery.surql  feature_output.surql
