[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backends for LARQL — CPU (BLAS), Metal (GPU), CUDA (planned). Owns matmul dispatch, Q4 kernels, buffer management."
keywords = ["matmul", "metal", "gpu", "quantization", "blas"]
categories = ["science"]

[dependencies]
# Matrix types — pure Rust matrixmultiply backend (works on all platforms)
# BLAS acceleration is added per-platform below where available.
ndarray = "0.16"

# macOS: Accelerate framework (ships with every Mac, no install required)
# Also hosts the Metal GPU backend.
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }
ndarray = { version = "0.16", features = ["blas"] }
metal = { version = "0.29", optional = true }

# Linux/BSD: OpenBLAS system library (install: apt install libopenblas-dev)
# openblas-src "system" feature prevents it from building OpenBLAS from source.
# blas-src "openblas" + openblas-src "system" → Cargo feature-merges to link the installed lib.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
blas-src    = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }
ndarray     = { version = "0.16", features = ["blas"] }

# Windows: pure ndarray/matrixmultiply — no BLAS setup required.
# For optional BLAS on Windows, add openblas-src with the "static" feature.

# CUDA backend (Windows + Linux; not macOS — use Metal there instead)
[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.12", features = ["cublas", "cuda-12060"], optional = true }

[features]
default = []
metal = ["dep:metal"]
cuda  = ["dep:cudarc"]

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"

[[bench]]
name = "matmul"
harness = false
