[package]
name = "larql-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transformer inference engine — forward pass, attention, FFN, layer norm from safetensors weights"
keywords = ["transformer", "inference", "llm", "interpretability"]
categories = ["science"]

[dependencies]
larql-models = { path = "../larql-models" }
larql-compute = { path = "../larql-compute" }
larql-core = { path = "../larql-core" }
larql-vindex = { path = "../larql-vindex" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Model weights
safetensors = "0.5"
memmap2 = "0.9"

# Matrix ops — pure Rust matrixmultiply by default; BLAS added per-platform below.
ndarray = "0.16"

# Tokenizer
tokenizers = "0.21"

# macOS: Accelerate BLAS (no install required)
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }
ndarray = { version = "0.16", features = ["blas"] }

# Linux/BSD: OpenBLAS system library (links installed lib, doesn't build from source)
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
blas-src     = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }
ndarray      = { version = "0.16", features = ["blas"] }

# Unix only: madvise hints for mmap'd stores
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
metal = ["larql-compute/metal"]
cuda  = ["larql-compute/cuda"]

[dev-dependencies]
assert_approx_eq = "1"
tempfile = "3"
