[package]
name = "larql-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model architecture definitions for LARQL — traits, config parsing, tensor key mappings"
keywords = ["transformer", "model-config", "llm", "architecture"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
