[package]
name = "larql-surreal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SurrealDB integration for LARQL — vector loading, schema generation, querying"
keywords = ["surrealdb", "vector-database", "knowledge-graph"]
categories = ["database"]

[dependencies]
larql-models = { path = "../larql-models" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
